ParseOscarFile/DVOscarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DVOscarParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class DVOscarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ASSOCIATED=1, ATTRIBUTE=2, BEGIN=3, COLON=4, COMMA=5, COUNT=6, DATASTORE=7, 
		DATATYPE=8, BOOLEAN=9, DATE=10, DEFAULT=11, END=12, END_ATTRIBUTE=13, 
		END_DATASTORE=14, END_ITEM=15, EQUAL=16, FALSE=17, CHARACTER=18, FLOAT=19, 
		GUID=20, ITEM=21, KEY=22, LBRACK=23, LCURLY=24, LENGTH=25, LPAREN=26, 
		NULL=27, PLURAL=28, RBRACK=29, RCURLY=30, RPAREN=31, SCALE=32, UNDERSCORE=33, 
		INTEGER=34, MANY_TO_MANY=35, MINUS=36, NUMBER_INT=37, NUMBER_FLOAT=38, 
		NUMBER=39, NUMERIC=40, ONE_TO_ONE=41, PLUS=42, PRECISION=43, STRING=44, 
		STRING_LITERAL=45, TIME=46, DATETIME=47, TRUE=48, IDENTIFIER=49, SPACE=50, 
		COMMENT=51, LINE_COMMENT=52;
	public const int
		RULE_dvoscar_file = 0, RULE_block = 1, RULE_datastore_statement = 2, RULE_parent_item_statement = 3, 
		RULE_item_statement = 4, RULE_child_item_statement = 5, RULE_associations = 6, 
		RULE_association_def = 7, RULE_cardinality = 8, RULE_o2o = 9, RULE_m2m = 10, 
		RULE_from_key = 11, RULE_to_key = 12, RULE_attribute_def = 13, RULE_attrib_properties = 14, 
		RULE_precision_def = 15, RULE_scale_def = 16, RULE_length_def = 17, RULE_default_value = 18, 
		RULE_identifier = 19, RULE_datatype_def = 20, RULE_properties = 21, RULE_property = 22, 
		RULE_pair = 23, RULE_display_name = 24, RULE_plural = 25, RULE_array = 26, 
		RULE_function_call = 27, RULE_arguments = 28, RULE_argument = 29, RULE_value = 30, 
		RULE_integer_value = 31, RULE_constant = 32, RULE_sign = 33;
	public static readonly string[] ruleNames = {
		"dvoscar_file", "block", "datastore_statement", "parent_item_statement", 
		"item_statement", "child_item_statement", "associations", "association_def", 
		"cardinality", "o2o", "m2m", "from_key", "to_key", "attribute_def", "attrib_properties", 
		"precision_def", "scale_def", "length_def", "default_value", "identifier", 
		"datatype_def", "properties", "property", "pair", "display_name", "plural", 
		"array", "function_call", "arguments", "argument", "value", "integer_value", 
		"constant", "sign"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "':'", "','", null, null, null, null, null, null, 
		null, null, null, null, "'='", null, null, null, null, null, null, "'['", 
		"'{'", null, "'('", null, null, "']'", "'}'", "')'", null, "'_'", null, 
		null, "'-'", null, null, null, null, null, "'+'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ASSOCIATED", "ATTRIBUTE", "BEGIN", "COLON", "COMMA", "COUNT", "DATASTORE", 
		"DATATYPE", "BOOLEAN", "DATE", "DEFAULT", "END", "END_ATTRIBUTE", "END_DATASTORE", 
		"END_ITEM", "EQUAL", "FALSE", "CHARACTER", "FLOAT", "GUID", "ITEM", "KEY", 
		"LBRACK", "LCURLY", "LENGTH", "LPAREN", "NULL", "PLURAL", "RBRACK", "RCURLY", 
		"RPAREN", "SCALE", "UNDERSCORE", "INTEGER", "MANY_TO_MANY", "MINUS", "NUMBER_INT", 
		"NUMBER_FLOAT", "NUMBER", "NUMERIC", "ONE_TO_ONE", "PLUS", "PRECISION", 
		"STRING", "STRING_LITERAL", "TIME", "DATETIME", "TRUE", "IDENTIFIER", 
		"SPACE", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DVOscarParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DVOscarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DVOscarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DVOscarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Dvoscar_fileContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(DVOscarParser.Eof, 0); }
		public Dvoscar_fileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dvoscar_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterDvoscar_file(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitDvoscar_file(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDvoscar_file(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Dvoscar_fileContext dvoscar_file() {
		Dvoscar_fileContext _localctx = new Dvoscar_fileContext(Context, State);
		EnterRule(_localctx, 0, RULE_dvoscar_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; block();
			State = 69; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public ITerminalNode BEGIN() { return GetToken(DVOscarParser.BEGIN, 0); }
		public Datastore_statementContext datastore_statement() {
			return GetRuleContext<Datastore_statementContext>(0);
		}
		public ITerminalNode END() { return GetToken(DVOscarParser.END, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; Match(BEGIN);
			State = 72; datastore_statement();
			State = 73; Match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Datastore_statementContext : ParserRuleContext {
		public ITerminalNode DATASTORE() { return GetToken(DVOscarParser.DATASTORE, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode END_DATASTORE() { return GetToken(DVOscarParser.END_DATASTORE, 0); }
		public Display_nameContext display_name() {
			return GetRuleContext<Display_nameContext>(0);
		}
		public PropertiesContext properties() {
			return GetRuleContext<PropertiesContext>(0);
		}
		public Parent_item_statementContext[] parent_item_statement() {
			return GetRuleContexts<Parent_item_statementContext>();
		}
		public Parent_item_statementContext parent_item_statement(int i) {
			return GetRuleContext<Parent_item_statementContext>(i);
		}
		public Datastore_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_datastore_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterDatastore_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitDatastore_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDatastore_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Datastore_statementContext datastore_statement() {
		Datastore_statementContext _localctx = new Datastore_statementContext(Context, State);
		EnterRule(_localctx, 4, RULE_datastore_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(DATASTORE);
			State = 76; identifier();
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==STRING_LITERAL) {
				{
				State = 77; display_name();
				}
			}

			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LCURLY) {
				{
				State = 80; properties();
				}
			}

			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 83; parent_item_statement();
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ITEM );
			State = 88; Match(END_DATASTORE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Parent_item_statementContext : ParserRuleContext {
		public Item_statementContext[] item_statement() {
			return GetRuleContexts<Item_statementContext>();
		}
		public Item_statementContext item_statement(int i) {
			return GetRuleContext<Item_statementContext>(i);
		}
		public Parent_item_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parent_item_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterParent_item_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitParent_item_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParent_item_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Parent_item_statementContext parent_item_statement() {
		Parent_item_statementContext _localctx = new Parent_item_statementContext(Context, State);
		EnterRule(_localctx, 6, RULE_parent_item_statement);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 90; item_statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 93;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Item_statementContext : ParserRuleContext {
		public ITerminalNode ITEM() { return GetToken(DVOscarParser.ITEM, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode END_ITEM() { return GetToken(DVOscarParser.END_ITEM, 0); }
		public PluralContext plural() {
			return GetRuleContext<PluralContext>(0);
		}
		public Display_nameContext display_name() {
			return GetRuleContext<Display_nameContext>(0);
		}
		public PropertiesContext properties() {
			return GetRuleContext<PropertiesContext>(0);
		}
		public AssociationsContext associations() {
			return GetRuleContext<AssociationsContext>(0);
		}
		public Attribute_defContext[] attribute_def() {
			return GetRuleContexts<Attribute_defContext>();
		}
		public Attribute_defContext attribute_def(int i) {
			return GetRuleContext<Attribute_defContext>(i);
		}
		public Child_item_statementContext child_item_statement() {
			return GetRuleContext<Child_item_statementContext>(0);
		}
		public Item_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_item_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterItem_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitItem_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItem_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Item_statementContext item_statement() {
		Item_statementContext _localctx = new Item_statementContext(Context, State);
		EnterRule(_localctx, 8, RULE_item_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(ITEM);
			State = 96; identifier();
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PLURAL) {
				{
				State = 97; plural();
				}
			}

			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==STRING_LITERAL) {
				{
				State = 100; display_name();
				}
			}

			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LCURLY) {
				{
				State = 103; properties();
				}
			}

			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ASSOCIATED) {
				{
				State = 106; associations();
				}
			}

			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 109; attribute_def();
				}
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==IDENTIFIER );
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ITEM) {
				{
				State = 114; child_item_statement();
				}
			}

			State = 117; Match(END_ITEM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Child_item_statementContext : ParserRuleContext {
		public Item_statementContext[] item_statement() {
			return GetRuleContexts<Item_statementContext>();
		}
		public Item_statementContext item_statement(int i) {
			return GetRuleContext<Item_statementContext>(i);
		}
		public Child_item_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_child_item_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterChild_item_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitChild_item_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChild_item_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Child_item_statementContext child_item_statement() {
		Child_item_statementContext _localctx = new Child_item_statementContext(Context, State);
		EnterRule(_localctx, 10, RULE_child_item_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 119; item_statement();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ITEM );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssociationsContext : ParserRuleContext {
		public Association_defContext[] association_def() {
			return GetRuleContexts<Association_defContext>();
		}
		public Association_defContext association_def(int i) {
			return GetRuleContext<Association_defContext>(i);
		}
		public AssociationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_associations; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterAssociations(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitAssociations(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssociations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssociationsContext associations() {
		AssociationsContext _localctx = new AssociationsContext(Context, State);
		EnterRule(_localctx, 12, RULE_associations);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 124; association_def();
				}
				}
				State = 127;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ASSOCIATED );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Association_defContext : ParserRuleContext {
		public ITerminalNode ASSOCIATED() { return GetToken(DVOscarParser.ASSOCIATED, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public CardinalityContext cardinality() {
			return GetRuleContext<CardinalityContext>(0);
		}
		public PropertiesContext properties() {
			return GetRuleContext<PropertiesContext>(0);
		}
		public Association_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_association_def; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterAssociation_def(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitAssociation_def(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssociation_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Association_defContext association_def() {
		Association_defContext _localctx = new Association_defContext(Context, State);
		EnterRule(_localctx, 14, RULE_association_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129; Match(ASSOCIATED);
			State = 130; identifier();
			State = 131; cardinality();
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LCURLY) {
				{
				State = 132; properties();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CardinalityContext : ParserRuleContext {
		public O2oContext o2o() {
			return GetRuleContext<O2oContext>(0);
		}
		public M2mContext m2m() {
			return GetRuleContext<M2mContext>(0);
		}
		public CardinalityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cardinality; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterCardinality(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitCardinality(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCardinality(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CardinalityContext cardinality() {
		CardinalityContext _localctx = new CardinalityContext(Context, State);
		EnterRule(_localctx, 16, RULE_cardinality);
		try {
			State = 137;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ONE_TO_ONE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 135; o2o();
				}
				break;
			case MANY_TO_MANY:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136; m2m();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class O2oContext : ParserRuleContext {
		public ITerminalNode ONE_TO_ONE() { return GetToken(DVOscarParser.ONE_TO_ONE, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public From_keyContext from_key() {
			return GetRuleContext<From_keyContext>(0);
		}
		public To_keyContext to_key() {
			return GetRuleContext<To_keyContext>(0);
		}
		public O2oContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_o2o; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterO2o(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitO2o(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitO2o(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public O2oContext o2o() {
		O2oContext _localctx = new O2oContext(Context, State);
		EnterRule(_localctx, 18, RULE_o2o);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139; Match(ONE_TO_ONE);
			State = 140; identifier();
			State = 141; from_key();
			State = 142; to_key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class M2mContext : ParserRuleContext {
		public ITerminalNode MANY_TO_MANY() { return GetToken(DVOscarParser.MANY_TO_MANY, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public From_keyContext from_key() {
			return GetRuleContext<From_keyContext>(0);
		}
		public To_keyContext to_key() {
			return GetRuleContext<To_keyContext>(0);
		}
		public M2mContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_m2m; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterM2m(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitM2m(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitM2m(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public M2mContext m2m() {
		M2mContext _localctx = new M2mContext(Context, State);
		EnterRule(_localctx, 20, RULE_m2m);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(MANY_TO_MANY);
			State = 145; identifier();
			State = 146; from_key();
			State = 147; to_key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class From_keyContext : ParserRuleContext {
		public ITerminalNode KEY() { return GetToken(DVOscarParser.KEY, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public From_keyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_from_key; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.EnterFrom_key(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDVOscarParserListener typedListener = listener as IDVOscarParserListener;
			if (typedListener != null) typedListener.ExitFrom_key(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDVOscarParserVisitor<TResult> typedVisitor = visitor as IDVOscarParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFrom_key(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public From_keyContext from_key() {
		From_keyContext _localctx = new From_keyContext(Context, State);
		EnterRule(_localctx, 22, RULE_from_key);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; Match(KEY);
			State = 150; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
